--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site
 name: "CS Blog"
 title: "CS Blog"
-description: "¡Hola! Soy Pedro Hernández y te doy la bienvenida a CS Blog, sitio en donde publico proyectos, investigaciones y tutoriales de programación."
+description: "¡Hola! Soy Pedro Hernández y te doy la bienvenida a mi blog en donde encontrarás proyectos, investigaciones y tutoriales de ciencias de la computación"
 logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
+favicon: 'assets/images/icono.png'
 google_analytics: 'UA-46278016-1'
 disqus: 'demowebsite'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
