--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink: /:title/
 authors:
   pedro:
     name: Pedro
-    display_name: Pedro
+    display_name: Pedro Hernández
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: pedro.a.hdez.a@gmail.com
     web: https://pedro-hdez.github.io/
